# winstructs

./: CHANGELOG.md  Cargo.toml  README.md  azure-pipelines.yml
.github/workflows/: pipeline.yml
examples/: guid_examples.rs  reference_examples.rs  security.rs  security_examples.rs  timestamp_examples.rs
src/: err.rs  guid.rs  lib.rs  macros.rs  reference.rs  security.rs  serialize.rs  timestamp.rs  utils.rs
src/ntfs/: mft_reference.rs  mod.rs
src/security/: ace.rs  acl.rs  authority.rs  mod.rs  sec_desc.rs  sid.rs
