[package]
name = "winstructs"
description = "Common structures used in parsing various windows protocols"
homepage = "https://github.com/omerbenamram/winstructs"
repository = "https://github.com/omerbenamram/winstrcuts"
license = "MIT/Apache-2.0"
readme = "README.md"

version = "0.2.3-alpha.0"
authors = ["Omer Ben-Amram <omerbenamram@gmail.com>", "Matthew Seyer <matthew.seyer@gmail.com>"]
edition = "2018"

[dependencies]
log = "0.4.6"
time = "0.1.42"
serde = {version = "1.0.91", features = ["derive"]}
serde_json = "1.0.39"
bitflags = "1.0.4"
byteorder = "1.3.1"
env_logger = "0.6.1"
num-traits = "0.2"
num-derive = "0.2"
snafu = "0.4.1"
chrono = {version ="0.4.6", features = ["serde"]}
