[package]
name = "winstructs"
description = "Common structures used in parsing various windows protocols"
homepage = "https://github.com/omerbenamram/winstructs"
repository = "https://github.com/omerbenamram/winstrcuts"
license = "MIT/Apache-2.0"
readme = "README.md"

version = "0.2.3"
authors = ["Omer Ben-Amram <omerbenamram@gmail.com>", "Matthew Seyer <matthew.seyer@gmail.com>"]
edition = "2018"

[dependencies]
log = "0.4.8"
time = "0.1.42"
serde = { version = "1.0.99", features = ["derive"] }
serde_json = "1.0.40"
bitflags = "1.1.0"
byteorder = "1.3.2"
env_logger = "0.6.2"
num-traits = "0.2.8"
num-derive = "0.2.5"
snafu = "0.5.0"
chrono = { version = "0.4.9", features = ["serde"] }
