[package]
name = "winstructs"
description = "Common structures used in parsing various windows protocols"
homepage = "https://github.com/omerbenamram/winstructs"
repository = "https://github.com/omerbenamram/winstrcuts"
license = "MIT/Apache-2.0"
readme = "README.md"

version = "0.3.1-alpha.0"
authors = ["Omer Ben-Amram <omerbenamram@gmail.com>", "Matthew Seyer <matthew.seyer@gmail.com>"]
edition = "2018"

[dependencies]
log = "0.4.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bitflags = "1.2"
byteorder = "1.3"
env_logger = "0.7"
num-traits = "0.2"
num-derive = "0.3"
thiserror = "1.0"
chrono = { version = "0.4", features = ["serde"] }
